--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       for (var i = 0; i < maskCount; i++) {
         var canvas = createCanvas()
         canvas.addEventListener('click', fadeOut);
-        canvas.classList.add('hidden');
+        // canvas.classList.add('hidden');
         canvasElements.push(canvas);
         containerElement.appendChild(canvas);
       }
